<resources>
    <string name="app_name">Guess</string>
    <string name="Yes_you_got_it">Yes, you got it!</string>
    <string name="Bigger">Bigger</string>
    <string name="smaller">smaller</string>
    <string name="AlertDialog_title">Message</string>
    <string name="OK">OK</string>
    <string name="title_activity_material">Guess</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Reset_Game">Replay Game?</string>
    <string name="Are_you_sure">Are you sure?</string>
    <string name="cancel">cancel</string>
    <string name="please_input_a_nunber_1_10">Please input a nunber(1-10)</string>
</resources>